--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2015 Git.Training
-	Adding changes before rebasing conflicts
+	Some silly changes from master branch
 -->
 <head>
-	<title>A very respectful website</title>
+	<title>Silly changes on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-			Some interersting stuff
+			Just stuff for now,
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; 2014 Piyush Shourie</p>
+		<p>&copy; 2015 P Shourie</p>
 	</footer>
 </body>
 </html>
