--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; 2015 P Shourie</p>
+		<p>&copy; 2015 Git Training</p>
 	</footer>
 </body>
 </html>
