--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>Lots of trouble, in a little repo</title>
+	<title>Updating title for stashing example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Junk Filler Content -->
 		<p>
-			Just nothing but trouble
+			Adding more important stuff here.
 		</p>
 	</main>
 	<footer class="container">
