Changes after git stash command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>Updating title for stashing example</title>
+	<title>Updating title for stash branch example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
